tests/fail-add1.err
Fatal error: exception Match_failure("src/codegen.ml", 287, 16)
