tests/fail-add1.cl
y = 2 
x = "Hello"
y > x 
